# Innoter_DRF

./: .gitignore  Docker-compose.yml  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/backend/: celery.py  settings.py  urls.py
backend/pages/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/pages/migrations/: 0001_initial.py  0002_alter_page_user_id.py
backend/posts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_alter_post_likes_user_ids.py
backend/tags/: models.py  serializers.py
backend/tags/migrations/: 0001_initial.py
backend/utils/: auth_middleware.py  auth_permissions.py  custom_authentication.py  custom_permissions.py
